--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     { 
-      "src": "./api.js", 
+      "src": "api.js",
       "use": "@vercel/node" 
     }
   ],
   "routes": [
     { 
-      "src": "/(.*)", 
-      "dest": "/" 
+      "src": "/(.*)",
+      "dest": "/api.js"
     }
   ]
 }
